fix: SVG size and reduced spacing between stacked avatars to enhance visual cohesion (#123)

--- a/packages/pillar-core/src/core/avatar/_avatar.css
+++ b/packages/pillar-core/src/core/avatar/_avatar.css
@@ -21,6 +21,10 @@
   }
 }
 
+.av-F > svg {
+  width: max(1.5em, 10px);
+}
+
 .av-I {
   /* width: 100%; */
   object-fit: cover;
@@ -69,9 +73,9 @@
 }
 
 .av-G-stack > * + * {
-  margin-inline-start: -0.5em;
+  margin-inline-start: -1.25em;
 }
 
 .av-G-grid {
-  gap: 0.375em;
+  gap: 0.25em;
 }
